--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
+@font-face {
+  font-family: 'Kanit';
+  src: url('/src/assets/fonts/Kanit-Regular.ttf') format('ttf');
+}
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  --font-family: Kanit, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Kanit, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -15,69 +21,27 @@
   -webkit-text-size-adjust: 100%;
 
   --surface-overlay: #E7E6E7;
+  --primary-color: #088D82;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+.icon-home .pi::before, 
+.icon-home .p-menuitem-icon::before{
+	content: url(/src/assets/icons/home.svg);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.icon-piggy-bank .pi::before{
+  content: url(/src/assets/icons/piggy-bank.svg);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.icon-swap .pi::before{
+  content: url(/src/assets/icons/swap.svg);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.icon-bank .pi::before{
+  content: url(/src/assets/icons/bank.svg);
 }
 
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.icon-wallet .pi::before{
+  content: url(/src/assets/icons/wallet.svg);
 }
