--- a/src/style.css
+++ b/src/style.css
@@ -17,11 +17,14 @@
 }
 
 
+html, body {
+  font-family: 'Kanit',  Arial, sans-serif;
+}
 
 :root {
   --font-family: 'Kanit',  Arial, sans-serif;
   font-family: 'Kanit', Arial, sans-serif;
-  font-size: 16px;
+  font-size: 10pt;
   line-height: 24px;
   font-weight: 400;
 
