--- a/src/assets/styles/sass/_menu.scss
+++ b/src/assets/styles/sass/_menu.scss
@@ -9,8 +9,9 @@
 	left: 0rem;
 	transition: transform $transitionDuration, left $transitionDuration;
 	background-color: var(--surface-overlay);
+    border: 1px solid #E7E6E7;
     padding: 1.5rem;
-    box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08)
+    // box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08)
 }
 
 .layout-menu {
