--- a/src/style.css
+++ b/src/style.css
@@ -64,3 +64,15 @@ html, body {
 .icon-wallet .pi::before{
   content: url(/src/assets/icons/wallet.svg);
 }
+
+
+.p-button, .p-button:hover {
+  background: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+.p-selectbutton .p-button.p-highlight:hover,
+.p-selectbutton .p-button.p-highlight {
+  background: var(--surface-overlay);
+  border-color: var(--surface-overlay);
+  color: #1B1B19;
+}
