cambios en dashboard

--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ html, body {
   --surface-overlay: #f9f9f9;
   --surface-ground: #FFFFFF;
   --primary-color: #088D82;
+  --text-color: #1B1B19;
 }
 
 
