--- a/src/assets/styles/sass/_topbar.scss
+++ b/src/assets/styles/sass/_topbar.scss
@@ -10,6 +10,7 @@
     transition: left $transitionDuration;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08);
 
     .layout-topbar-logo {
@@ -36,7 +37,7 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        color: var(--text-color-secondary);
+        color: var(--text-color);
         border-radius: 50%;
         width: 3rem;
         height: 3rem;
@@ -92,7 +93,7 @@
 
         .layout-topbar-logo {
             width: auto;
-            order: 2;
+            // order: 2;
         }
     
         .layout-menu-button {
