--- a/src/style.css
+++ b/src/style.css
@@ -78,8 +78,15 @@ html, body {
   content: url(/src/assets/icons/wallet.svg);
 }
 
+.icon-profile-user .pi::before{
+  content: url(/src/assets/icons/icon-user.svg);
+}
 
-.p-button, .p-button:hover {
+.icon-document-file .pi::before{
+  content: url(/src/assets/icons/icon-document.svg);
+}
+
+.p-button, .p-button:hover, .p-button:enabled:hover {
   background: var(--primary-color);
   border: 1px solid var(--primary-color);
 }
