menu topbar editado

--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,24 @@ html, body {
   content: url(/src/assets/icons/icon-document.svg);
 }
 
+.icon-headset .pi::before{
+  content: url(/src/assets/icons/headset.svg);
+}
+
+.icon-help .pi::before{
+  content: url(/src/assets/icons/help.svg);
+}
+
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover,
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
+  color: #00BEB0;
+}
+
+.p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-ico {
+  color: #00BEB0;
+  background: #e9ecef;
+}
+
 .p-button, .p-button:hover, .p-button:enabled:hover {
   background: var(--primary-color);
   border: 1px solid var(--primary-color);
