--- a/src/assets/styles/sass/_layout.scss
+++ b/src/assets/styles/sass/_layout.scss
@@ -9,4 +9,5 @@
 @import "./_responsive";
 @import "./_utils";
 @import "./_typography";
-@import "./buttons"
+@import "./buttons";
+@import "./dialog"
