--- a/src/assets/styles/sass/_typography.scss
+++ b/src/assets/styles/sass/_typography.scss
@@ -1,7 +1,6 @@
 h1, h2, h3, h4, h5, h6 {
-	margin: 1.5rem 0 1rem 0;
+	margin: initial;
 	font-weight: 500;
-	line-height: 1.2;
 	color: inherit;
 
 	&:first-child {
@@ -10,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size: 2.5rem;
+	font-size: 3.5rem;
 }
 
 h2 {
@@ -53,6 +52,7 @@ hr {
 }
 
 p {
+	font-size: 1.5rem;
 	margin: 0 0 1rem 0;
 	line-height: 1.5;
 
