--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     padding: 6rem 2rem 2rem 2rem;
     transition: margin-left $transitionDuration;
+    background: #FFFFFF;
 }
 
 .layout-main {
