--- a/src/style.css
+++ b/src/style.css
@@ -255,3 +255,9 @@ button.p-button.p-component.p-button.edit-document-button {
 .profile .p-button:focus {
   box-shadow: none;
 }
+.p-selectbutton .p-button.p-highlight:hover, .p-selectbutton .p-button.p-highlight {
+  background: #d7dadd;
+  border-color: #cbcbcb;
+  color: #1B1B19;
+  font-weight: bold;
+}
