--- a/src/style.css
+++ b/src/style.css
@@ -281,5 +281,9 @@ button.p-button.p-component.p-button.edit-document-button {
   /*border-radius: 50%;*/
   /*width: 1rem;*/
   /*height: 1rem;*/
-  background-color: var(--primary-color);;
+  background-color: var(--primary-color);
+}
+
+small {
+  font-size: 10pt;
 }
