--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     padding: 6rem 2rem 2rem 2rem;
     transition: margin-left $transitionDuration;
-    background: #FFFFFF;
+    background: rgb(247, 253, 253);
 }
 
 .layout-main {
