--- a/src/assets/styles/sass/_typography.scss
+++ b/src/assets/styles/sass/_typography.scss
@@ -1,67 +1,67 @@
-h1, h2, h3, h4, h5, h6 {
-	margin: initial;
-	font-weight: 500;
-	color: inherit;
+// h1, h2, h3, h4, h5, h6 {
+// 	margin: initial;
+// 	font-weight: 500;
+// 	color: inherit;
 
-	&:first-child {
-		margin-top: 0;
-	}
-}
+// 	&:first-child {
+// 		margin-top: 0;
+// 	}
+// }
 
-h1 {
-	font-size: 3.5rem;
-}
+// h1 {
+// 	font-size: 3.5rem;
+// }
 
-h2 {
-	font-size: 2rem;
-}
+// h2 {
+// 	font-size: 2rem;
+// }
 
-h3 {
-	font-size: 1.75rem;
-}
+// h3 {
+// 	font-size: 1.75rem;
+// }
 
-h4 {
-	font-size: 1.5rem;
-}
+// h4 {
+// 	font-size: 1.5rem;
+// }
 
-h5 {
-	font-size: 1.25rem;
-}
+// h5 {
+// 	font-size: 1.25rem;
+// }
 
-h6 {
-	font-size: 1rem;
-}
+// h6 {
+// 	font-size: 1rem;
+// }
 
-mark {
-	background: #FFF8E1;
-	padding: .25rem .4rem;
-	border-radius: $borderRadius;
-	font-family: monospace;
-}
+// mark {
+// 	background: #FFF8E1;
+// 	padding: .25rem .4rem;
+// 	border-radius: $borderRadius;
+// 	font-family: monospace;
+// }
 
-blockquote {
-	margin: 1rem 0;
-	padding: 0 2rem;
-	border-left: 4px solid #90A4AE;
-}
+// blockquote {
+// 	margin: 1rem 0;
+// 	padding: 0 2rem;
+// 	border-left: 4px solid #90A4AE;
+// }
 
-hr {
-	border-top: solid var(--surface-border);
-	border-width: 1px 0 0 0;
-	margin: 1rem 0;
-}
+// hr {
+// 	border-top: solid var(--surface-border);
+// 	border-width: 1px 0 0 0;
+// 	margin: 1rem 0;
+// }
 
-p {
-	font-size: 1.5rem;
-	margin: 0 0 1rem 0;
-	line-height: 1.5;
+// p {
+// 	font-size: 1.5rem;
+// 	margin: 0 0 1rem 0;
+// 	line-height: 1.5;
 
-	&:last-child {
-		margin-bottom: 0;
-	}
-}
+// 	&:last-child {
+// 		margin-bottom: 0;
+// 	}
+// }
 
-.txt-border-bottom{
-    border-bottom: 1px solid #BFEFEB;
-    padding: 0.4rem 1rem;
-}
+// .txt-border-bottom{
+//     border-bottom: 1px solid #BFEFEB;
+//     padding: 0.4rem 1rem;
+// }
