--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -3,9 +3,10 @@
     flex-direction: column;
     min-height: 100vh;
     justify-content: space-between;
-    padding: 6rem 2rem 2rem 2rem;
+    padding: 6rem 1rem 0rem 1rem;
     transition: margin-left $transitionDuration;
     background: rgb(247, 253, 253);
+    overflow: auto;
 }
 
 .layout-main {
