--- a/src/assets/styles/sass/_responsive.scss
+++ b/src/assets/styles/sass/_responsive.scss
@@ -3,7 +3,7 @@
         &.layout-overlay {
             .layout-main-container {
                 margin-left: 0;
-                padding-left: 2rem;
+                // padding-left: 2rem;
             }
 
             .layout-sidebar {
@@ -50,7 +50,7 @@
     .layout-wrapper {
         .layout-main-container {
             margin-left: 0;
-            padding-left: 2rem;
+            // padding-left: 2rem;
         }
 
         .layout-sidebar {
