--- a/src/assets/styles/sass/_step.scss
+++ b/src/assets/styles/sass/_step.scss
@@ -6,7 +6,7 @@
 .p-steps .p-steps-item .p-menuitem-link .p-steps-number {
     color: #1B1B19;
     border: 1px solid var(--primary-color);
-    background: #ffffff;
+    // background: #f9f9f9 !important;
     min-width: 2rem;
     height: 2rem;
     line-height: 2rem;
