--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -7,10 +7,11 @@
   transition: margin-left $transitionDuration;
   background: rgb(247, 253, 253);
   overflow: auto;
-  margin-bottom: 10%;
+  padding-bottom: 5vh;
 
   @media only screen and (max-width: 991px) {
     max-height: 90vh;
+    min-height: 90vh;
   }
 
   @media only screen and (min-width: 992px) {
