--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -9,8 +9,8 @@
   overflow: auto;
 
   @media only screen and (max-width: 991px) {
-    max-height: 90vh;
-    min-height: 90vh;
+    //max-height: 90vh;
+    //min-height: 90vh;
     padding-bottom: 10vh;
   }
 
