--- a/src/style.css
+++ b/src/style.css
@@ -123,6 +123,11 @@ html, body {
     content: url(/src/assets/icons/help.svg);
 }
 
+.icon-history .pi::before {
+    content: url(/src/assets/icons/history.svg);
+}
+
+
 .p-tieredmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover,
 .p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
     color: #00BEB0;
